--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,13 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#58857e</color>
     <color name="dark_gray">#297b7b7b</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="app_text_color">#000000</color>
+
+    <color name="holo_blue_light">#ff33b5e5</color>
+
+    <color name="black_50">#80000000</color>
 </resources>
