--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -18,4 +18,14 @@
     <dimen name="padding_normal">12dp</dimen>
     <dimen name="padding_large">14dp</dimen>
     <dimen name="padding_x_large">16dp</dimen>
+
+    <!--Text Sizes-->
+    <dimen name="text_size_tiny">10sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="text_size_normal">16sp</dimen>
+    <dimen name="text_size_large">18sp</dimen>
+    <dimen name="text_size_extra_large">20sp</dimen>
+    <dimen name="text_size_extra_large_x">22sp</dimen>
+    <dimen name="text_size_title_big">34sp</dimen>
 </resources>
