--- a/app/src/main/res/layout/item_empty_location_view.xml
+++ b/app/src/main/res/layout/item_empty_location_view.xml
@@ -16,5 +16,6 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="@string/no_data_found"
-        android:textSize="20sp" />
+        android:textAppearance="@style/CustomTextAppearance.Bold"
+        android:textSize="@dimen/text_size_large" />
 </layout>
