--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/home_appbar"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/empty"
             android:layout_height="wrap_content"
             app:elevation="@dimen/empty"
             app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
                 android:maxLines="1"
                 android:onClick="openPlaceSearch"
                 android:padding="@dimen/padding_medium"
-                app:elevation="10dp" />
+                app:elevation="@dimen/padding_medium" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <fragment
@@ -110,7 +110,7 @@
             android:id="@+id/cardView"
             android:layout_width="@dimen/empty"
             android:layout_height="wrap_content"
-            app:cardElevation="4dp"
+            app:cardElevation="@dimen/elevation_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -121,48 +121,47 @@
                 android:layout_height="match_parent">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/ivSun"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="@dimen/padding_large"
+                    android:layout_marginLeft="@dimen/padding_large"
+                    android:layout_marginTop="@dimen/padding_small"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_sunny" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/ivMoon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_x_large"
-                    android:tint="#87b4f8"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
-                    app:layout_constraintStart_toStartOf="@+id/imageView2"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
+                    app:layout_constraintEnd_toEndOf="@+id/ivSun"
+                    app:layout_constraintStart_toStartOf="@+id/ivSun"
+                    app:layout_constraintTop_toBottomOf="@+id/ivSun"
                     app:srcCompat="@drawable/ic_night" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/ivArrowUpDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginLeft="32dp"
-                    android:tint="#ff9800"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
-                    app:layout_constraintTop_toTopOf="@+id/imageView2"
+                    android:layout_marginStart="@dimen/_32dp"
+                    android:layout_marginLeft="@dimen/_32dp"
+                    android:tint="@color/arrow_up_day"
+                    app:layout_constraintBottom_toBottomOf="@+id/ivSun"
+                    app:layout_constraintStart_toEndOf="@+id/ivSun"
+                    app:layout_constraintTop_toTopOf="@+id/ivSun"
                     app:srcCompat="@drawable/ic_arrow_up" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/ivArrowDownDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="76dp"
-                    android:layout_marginLeft="76dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:tint="#fbcd96"
+                    android:layout_marginStart="@dimen/_32dp"
+                    android:layout_marginLeft="@dimen/_32dp"
+                    android:layout_marginEnd="@dimen/margin_small"
+                    android:layout_marginRight="@dimen/margin_large"
+                    android:tint="@color/arrow_down_day"
                     app:layout_constraintBottom_toBottomOf="@+id/ivArrowUpDay"
                     app:layout_constraintEnd_toStartOf="@+id/tvSunset"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -175,8 +174,8 @@
                     android:id="@+id/tvSunrise"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="@dimen/margin_small"
+                    android:layout_marginLeft="@dimen/margin_small"
                     android:text="@{viewModel.allDataModel.sunrise}"
                     android:textAppearance="@style/CustomTextAppearance.Light"
                     android:textSize="@dimen/text_size_normal"
@@ -203,11 +202,11 @@
                     android:id="@+id/ivArrowUpNight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+                    app:layout_constraintBottom_toBottomOf="@+id/ivMoon"
                     app:layout_constraintEnd_toEndOf="@+id/ivArrowUpDay"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/ivArrowUpDay"
-                    app:layout_constraintTop_toTopOf="@+id/imageView3"
+                    app:layout_constraintTop_toTopOf="@+id/ivMoon"
                     app:srcCompat="@drawable/ic_arrow_up" />
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -255,12 +254,12 @@
                 <View
                     android:id="@+id/view"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/_1dp"
                     android:layout_marginTop="@dimen/margin_small"
                     android:layout_marginBottom="@dimen/margin_small"
                     android:background="@color/dark_gray"
                     app:layout_constraintBottom_toTopOf="@+id/txt_date"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/ivMoon" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/img_play"
@@ -344,8 +343,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivPin"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:layout_marginLeft="@dimen/margin_small"
             android:layout_marginTop="@dimen/margin_small"
