--- a/app/src/main/res/layout/dialog_saved_pin.xml
+++ b/app/src/main/res/layout/dialog_saved_pin.xml
@@ -34,7 +34,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1px"
+            android:layout_height="0.5dp"
             android:background="@android:color/darker_gray" />
 
         <Button
