--- a/app/src/main/res/layout/item_location_list_view.xml
+++ b/app/src/main/res/layout/item_location_list_view.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_large"
             android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/margin_small"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_sunny" />
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_x_large"
-            android:tint="#87b4f8"
+            android:tint="nig"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:tint="#ff9800"
+            android:tint="@color/arrow_up_day"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView2"
@@ -61,9 +61,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="76dp"
             android:layout_marginLeft="76dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:tint="#fbcd96"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_marginRight="@dimen/margin_small"
+            android:tint="@color/arrow_down_day"
             app:layout_constraintBottom_toBottomOf="@+id/ivArrowUpDay"
             app:layout_constraintEnd_toStartOf="@+id/tvSunset"
             app:layout_constraintHorizontal_bias="1.0"
@@ -76,8 +76,8 @@
             android:id="@+id/tvSunrise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginLeft="@dimen/margin_small"
             android:text="@{pinnedLocation.sunrise}"
             android:textAppearance="@style/CustomTextAppearance.Light"
             android:textSize="@dimen/text_size_normal"
